--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,9 @@
   ],
   "description": "This a visual SVG-based clock",
   "main": "station-clock.js",
-  "moduleType": [],
+  "moduleType": [
+      "globals"
+    ],
   "keywords": [
     "clock",
     "svg",
