--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "station-clock",
+  "version": "1.0.1",
   "homepage": "https://github.com/Huppys/Station-Clock",
   "authors": [
     "Rüdiger Appel <ruediger.appel@me.com>",
